# mr_recon

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  env.yml  environment.yml  mkdocs.yml  pyproject.toml
docs/: gen_api_nav.py  index.md  reference.md  requirements.txt
docs/api/: SUMMARY.md
docs/examples/: cs.ipynb  field.ipynb  grappa.ipynb  nufft.ipynb  sense.ipynb
src/mr_recon/: __init__.py  algs.py  block.py  calib.py  dtypes.py  field.py  fourier.py  gfactor.py  indexing.py  interpolate.py  linop.py  linops.py  nufft.py  pad.py  plot.py  prox.py  recon.py  recons.py  sh.py  spatial.py  utils.py
src/mr_recon/imperfections/: b0_est.py  coco.py  combine.py  eddy.py  exponential.py  field.py  hofft_decomp.py  imperf_decomp.py  imperfection.py  lowrank_imperfection.py  main_field.py  motion.py  motion_op_torch.py  off_grid.py  sh.py  spatio_temporal_imperf.py  three_shear_op.py
tests/: correlation_analysis.py  exper_kt_kernel.py  optimize_masks.py  optimize_modes.py  some_debug_code.py  test_b0.py  test_coco_hop.py  test_coil_est.py  test_dcf.py  test_dspiral.py  test_eigen.py  test_epi.py  test_gfactor.py  test_grappa.py  test_grappa_ariel.py  test_grappa_general.py  test_high_order.py  test_hop.py  test_interp_svd.py  test_lobpcg.py  test_lowrank_nufft.py  test_motion.py  test_mrfrf.py  test_nufft.py  test_nufft_scaling.py  test_rovir.py  test_sense.py  test_spatial_resize.py  test_spatio_temporal.py  test_subspace_toeplitz.py  test_svd.py  test_svd_nufft.py  test_time_compression.py  test_two_stage_mrf.py  test_type3_nufft.py  test_wavelet.py
(+20 files in other folders)
